# xiPeopleCounter

./: .clang-tidy  CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  DetectionResult.h  Detector.cpp  Detector.h  Ui.cpp  Ui.h  main.cpp
xiApiPlusOcv/: CMakeLists.txt  xiApiPlusOcv.cpp  xiApiPlusOcv.hpp
